--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 .label-task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-row-wrapper {
   display: flex;
@@ -118,7 +118,7 @@ h3,
   width: 226px;
 }
 .list-item .task {
-  width: 226px
+  width: 226px;
 }
 .delete .img {
   height: 2em;
@@ -131,18 +131,18 @@ h3,
 
 /* Completed */
 .completed-tasks .label-task {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .list .task {
-  display: none
+  display: none;
 }
 
 .edit-mode .task {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode .label-task {
